--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -7,6 +7,11 @@ BETTER_AUTH_SECRET="your-super-secret-key-here-change-this-in-production"
 # Better Auth Base URL
 BETTER_AUTH_URL="http://localhost:3001"
 
-# GitHub OAuth (optional - for social login)
-GITHUB_CLIENT_ID=""
-GITHUB_CLIENT_SECRET=""
+# Frontend URL for CORS
+FRONTEND_URL="http://localhost:3000"
+
+# Port (Railway will set this automatically)
+PORT=3001
+
+# Node Environment
+NODE_ENV="development"
