--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,22 +6,22 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src --ext .js,.ts || true",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
-    "hono": "^4.6.15",
     "@prisma/client": "^6.0.0",
-    "better-auth": "^1.3.0"
+    "better-auth": "^1.3.0",
+    "hono": "^4.9.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.7.0",
-    "eslint": "^8.56.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "prisma": "^6.0.0"
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "prisma": "^6.0.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
