--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@trpc/react-query": "^11.4.4",
     "better-auth": "^1.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,14 +24,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
