--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
-    "clean": "turbo clean"
+    "clean": "turbo clean",
+    "format": "ultracite format",
+    "lint:ultracite": "ultracite lint",
+    "check": "ultracite format",
+    "ci": "biome ci ."
   },
   "devDependencies": {
-    "turbo": "^2.5.6"
+    "@biomejs/biome": "^2.2.0",
+    "turbo": "^2.5.6",
+    "ultracite": "^5.1.8"
   },
-  "packageManager": "npm@8.0.0"
+  "packageManager": "npm@8.0.0",
+  "dependencies": {
+    "@tanstack/react-query": "^5.85.3",
+    "@trpc/client": "^11.4.4",
+    "@trpc/next": "^11.4.4",
+    "@trpc/react-query": "^11.4.4",
+    "@trpc/server": "^11.4.4",
+    "zod": "^4.0.17"
+  }
 }
