--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,10 @@
     },
     "clean": {
       "cache": false
+    },
+    "//#format": {},
+    "//#lint:ultracite": {
+      "cache": false
     }
   }
 }
