--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,5 +1,5 @@
 # Database URL for MongoDB
-DATABASE_URL="mongodb://localhost:27017/check-ai-visibility"
+DATABASE_URL="mongodb://localhost:27017/checkaivisibility"
 
 # Better Auth Secret (generate a random secret for production)
 BETTER_AUTH_SECRET="your-super-secret-key-here-change-this-in-production"
@@ -15,3 +15,25 @@ PORT=3001
 
 # Node Environment
 NODE_ENV="development"
+
+# AI Providers (placeholders - add real keys when ready)
+OPENAI_API_KEY="sk-placeholder-add-your-openai-key"
+PERPLEXITY_API_KEY="pplx-placeholder-add-your-perplexity-key"
+
+# File Storage (placeholder - configure when adding real storage)
+# AWS_ACCESS_KEY_ID=""
+# AWS_SECRET_ACCESS_KEY=""
+# AWS_REGION="us-east-1"
+# AWS_S3_BUCKET="checkaivisibility-reports"
+
+# Email (placeholder - configure when adding email notifications)
+# SMTP_HOST="smtp.sendgrid.net"
+# SMTP_USER="apikey"
+# SMTP_PASS=""
+
+# Payment Integration (commented out for manual management)
+# STRIPE_SECRET_KEY=""
+# STRIPE_WEBHOOK_SECRET=""
+
+# Redis (commented out for simple in-memory processing)
+# REDIS_URL="redis://localhost:6379"
