--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,13 +7,20 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .js,.ts || true",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset --force"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "@prisma/client": "^6.0.0",
+    "@trpc/server": "^11.0.0",
     "better-auth": "^1.3.0",
-    "hono": "^4.9.2"
+    "hono": "^4.9.2",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
